eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-service
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
