service-registry-nord-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-dashboard
  labels:
    app: eureka-server
spec:
  type: NodePort
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
      nodePort: 30761
      name: http
  selector:
    app: eureka-server
