service-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-registry
spec:
  selector:
    app: service-registry
  ports:
    - protocol: "TCP"
      port: 8761
      targetPort: 8761
  type: NodePort
